COPY/base/automation/ingress/evolution-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evolution-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: evolution.automatizei.chat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evolution
                port:
                  number: 8080

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: evolution-ingress
#   namespace: dev
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: evolution.grcode.eastus.cloudapp.azure.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: evolution
#                 port:
#                   number: 8080
