COPY/base/automation/ingress/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: n8n.automatizei.chat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: n8n-ingress
#   namespace: dev
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: n8n.grcode.eastus.cloudapp.azure.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: n8n
#                 port:
#                   number: 5678
